--- a/ClientApp/src/app/account/register/register.component.html
+++ b/ClientApp/src/app/account/register/register.component.html
@@ -9,21 +9,53 @@
                     </h3>
                 </div>
                 <div class="form-floating mb-3">
-                    <input formControlName="firstName" type="text" placeholder="First name" class="form-control" />
+                    <input formControlName="firstName" type="text" placeholder="First name" class="form-control" 
+                    [class.is-invalid]="submitted && registerForm.get('firstName')?.errors"/>
                     <label for="firstName">First name</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input formControlName="lastName" type="text" placeholder="Last name" class="form-control" />
-                    <label for="lastName">Last name</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input formControlName="email" type="text" placeholder="Email" class="form-control" />
-                    <label for="email">Email</label>
+                    <span class="text-danger" *ngIf="submitted && 
+                        registerForm.get('firstName')?.hasError('required')">
+                        First name is required
+                    </span>
+                    <span class="text-danger" *ngIf="submitted && registerForm.get('firstName')?.hasError('minlength') || registerForm.get('firstName')?.hasError('maxlength')">
+                        First name must be at least 3, and maximum 15 characters
+                    </span>
                 </div>
 
                 <div class="form-floating mb-3">
-                    <input formControlName="password" type="password" placeholder="Password" class="form-control" />
+                    <input formControlName="lastName" type="text" placeholder="Last name" class="form-control" 
+                    [class.is-invalid]="submitted && registerForm.get('lastName')?.errors"/>
+                    <label for="lastName">Last name</label>
+                    <span class="text-danger" *ngIf="submitted && 
+                        registerForm.get('lastName')?.hasError('required')">
+                        Last name is required
+                    </span>
+                    <span class="text-danger" *ngIf="submitted && registerForm.get('lastName')?.hasError('minlength') || registerForm.get('lastName')?.hasError('maxlength')">
+                        Last name must be at least 3, and maximum 15 characters
+                    </span>
+                </div>
+
+                <div class="form-floating mb-3">
+                    <input formControlName="email" type="text" placeholder="Email" class="form-control"
+                    [class.is-invalid]="submitted && registerForm.get('email')?.errors"/>
+                    <label for="email">Email</label>
+                    <span class="text-danger" *ngIf="submitted && registerForm.get('email')?.hasError('required')">
+                        Email is required
+                    </span>
+                    <span class="text-danger" *ngIf="submitted && registerForm.get('email')?.hasError('pattern')">
+                        Invalid Email address
+                    </span>
+                </div>
+
+                <div class="form-floating mb-3">
+                    <input formControlName="password" type="password" placeholder="Password" class="form-control" 
+                    [class.is-invalid]="submitted && registerForm.get('password')?.errors"/>
                     <label for="password">Password</label>
+                    <span class="text-danger" *ngIf="submitted && registerForm.get('password')?.hasError('required')">
+                        Password is required
+                    </span>
+                    <span class="text-danger" *ngIf="submitted && registerForm.get('password')?.hasError('minlength') || registerForm.get('password')?.hasError('maxlength')">
+                        Password must be at least 6, and maximum 15 characters
+                    </span>
                 </div>
 
                 <div class="d-grid mt-4 px-1">
