--- a/ClientApp/src/app/account/register/register.component.html
+++ b/ClientApp/src/app/account/register/register.component.html
@@ -58,6 +58,10 @@
                     </span>
                 </div>
 
+                <div class="form-floating" *ngIf="errorMessages.length > 0">
+                    <app-validation-messages [errorMessages]="errorMessages"></app-validation-messages>
+                </div>
+
                 <div class="d-grid mt-4 px-1">
                     <button class="btn btn-lg btn-info" type="submit">Create Account</button>
                 </div>
